--- a/public/auto-show.css
+++ b/public/auto-show.css
@@ -98,7 +98,15 @@ section h2 {
     }
 }
 
-#overlay,#overlay-changeUsername,#order-car-menu {
+.add-fav:hover {
+    .icon-heart {
+        color: orange;
+    }
+}
+
+#overlay,
+#overlay-changeUsername,
+#order-car-menu {
     display: none;
     position: fixed;
     top: 0;
@@ -112,7 +120,9 @@ section h2 {
 }
 
 /* Style for the pop-up box */
-#popup,#popup-changeUsername,#popup-order-car {
+#popup,
+#popup-changeUsername,
+#popup-order-car {
     background: linear-gradient(90deg, rgba(51, 51, 51, 1) 9%, rgba(87, 85, 92, 1) 42%, rgba(165, 158, 181, 1) 100%);
     padding: 20px;
     border-radius: 10px;
@@ -121,7 +131,8 @@ section h2 {
 }
 
 /* Style for the close button */
-#close,#close-order-car {
+#close,
+#close-order-car {
     cursor: pointer;
     position: absolute;
     top: 10px;
@@ -131,7 +142,8 @@ section h2 {
 }
 
 /* Style for the buttons */
-#popup button,#popup-changeUsername button {
+#popup button,
+#popup-changeUsername button {
     padding: 10px 20px;
     margin: 10px;
     font-size: 16px;
@@ -142,7 +154,8 @@ section h2 {
     background-color: #444242;
 }
 
-#popup button:hover,#popup-changeUsername button:hover {
+#popup button:hover,
+#popup-changeUsername button:hover {
     background-color: #535353;
 }
 
@@ -192,14 +205,18 @@ section h2 {
     background-color: #6d6d6d;
 }
 
-#error-car-manufacturer,#error-car-model,#error-car-year {
+#error-car-manufacturer,
+#error-car-model,
+#error-car-year {
     color: white;
     background-color: red;
     border: 5px solid red;
     border-radius: 5px;
 }
 
-#car-manufacturer,#car-model,#car-year {
+#car-manufacturer,
+#car-model,
+#car-year {
     width: max-content;
 }
 
@@ -217,9 +234,11 @@ section h2 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+    background: rgba(0, 0, 0, 0.5);
+    /* Semi-transparent overlay */
     z-index: 1;
-    overflow: hidden; /* Disable scrolling on the body when pop-up is displayed */
+    overflow: hidden;
+    /* Disable scrolling on the body when pop-up is displayed */
 }
 
 /* Styles for the pop-up content */
