Implemented the Newsletter mail system

--- a/public/reset-password.css
+++ b/public/reset-password.css
@@ -29,3 +29,44 @@ body {
 #resetPasswordForm button:hover {
     background-color: #4d4a4a;
 }
+
+#reset-password-container {
+    max-width: 400px;
+    margin: 20px auto;
+    padding: 20px;
+    background: linear-gradient(90deg, rgb(95, 95, 95) 9%, rgba(87, 85, 92, 1) 42%, rgba(165, 158, 181, 1) 100%);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    text-align: center;
+}
+
+h2 {
+    color: #333333;
+}
+
+p {
+    color: #333333;
+    margin-bottom: 20px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    margin-bottom: 5px;
+    color: #333333;
+}
+
+input {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #cccccc;
+    border-radius: 3px;
+    font-size: 14px;
+}
+
+#result-msg {
+    margin-top: 15px;
+}
