--- a/public/showroom.css
+++ b/public/showroom.css
@@ -104,3 +104,26 @@ body {
         transform: rotate(360deg);
     }
 }
+
+#unsubscribe-confirmation,
+#unsubscribe-confirmation-2 {
+    text-align: center;
+    background-color: #646464;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    padding: 20px;
+    max-width: 400px;
+    margin: 70px auto;
+}
+
+#unsubscribe-confirmation p,
+#unsubscribe-confirmation-2 p {
+    color: #333333;
+    margin: 10px 0;
+    font-size: 16px;
+}
+
+#tick-icon {
+    width: 50px;
+    height: 50px;
+}
