--- a/public/pages-style.css
+++ b/public/pages-style.css
@@ -2,9 +2,9 @@
 @import url(nav-header.css);
 @import url(banner.css);
 @import url(info-section.css);
-@import url(preview.css);
+@import url(cars-preview.css);
 @import url(footer.css);
-@import url(responsive-mobile.css);
+@import url(responsive-mobiles.css);
 
 * {
     padding: 0;
