--- a/public/index.css
+++ b/public/index.css
@@ -109,3 +109,58 @@ body {
 .car-card {
     text-align: center;
 }
+
+#overlay,
+#overlay-changeUsername,
+#order-car-menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+/* Style for the pop-up box */
+#popup,
+#popup-changeUsername,
+#popup-order-car {
+    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 9%, rgba(87, 85, 92, 1) 42%, rgba(165, 158, 181, 1) 100%);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+/* Style for the close button */
+#close,
+#close-order-car {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    color: #fff;
+}
+
+/* Style for the buttons */
+#popup button,
+#popup-changeUsername button {
+    padding: 10px 20px;
+    margin: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    color: whitesmoke;
+    background-color: #444242;
+}
+
+#popup button:hover,
+#popup-changeUsername button:hover {
+    background-color: #535353;
+}
