Fixed pop up msg bug and width of recently viewed cars

--- a/public/index.css
+++ b/public/index.css
@@ -34,7 +34,7 @@ body {
     }
 
     .slick-track .car-card {
-        min-width: 340px !important;
+        max-width: 400px !important;
     }
 }
 
