--- a/public/nav-header.css
+++ b/public/nav-header.css
@@ -16,11 +16,17 @@
     padding: 0 3.2rem;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 0%, rgba(79, 78, 83, 1) 16%, rgba(87, 85, 92, 1) 26%, rgba(129, 125, 140, 1) 52%, rgba(165, 158, 181, 1) 90%);    
+    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 0%, rgba(79, 78, 83, 1) 16%, rgba(87, 85, 92, 1) 26%, rgba(129, 125, 140, 1) 52%, rgba(165, 158, 181, 1) 90%);
     position: sticky;
     top: 0;
     background-color: white;
-    z-index: 1000;
+    z-index: 11111000;
+}
+
+.nav-header.fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .nav-header.scrolled {
@@ -93,7 +99,7 @@ a {
     margin-top: 0.5rem;
 }
 
-.nav-header .h1 h1{
+.nav-header .h1 h1 {
     font-family: 'Arial', sans-serif;
     font-size: 1.5vw;
     font-weight: bold;
@@ -125,6 +131,7 @@ a {
     font-size: 13.5px;
 }
 
-#log-out-text,#log-out-icon {
+#log-out-text,
+#log-out-icon {
     display: none;
 }
