--- a/public/profile.css
+++ b/public/profile.css
@@ -248,6 +248,7 @@ input[type="password"]::-webkit-reveal {
 }
 
 .order-status[status="Pending"] {
+    color: #000;
     border: 2px solid black;
     border-radius: 5px;
     background-color: rgb(156, 156, 89);
@@ -265,6 +266,7 @@ input[type="password"]::-webkit-reveal {
 }
 
 .order-status[status="Expired"] {
+    color: #000;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
     background-color: rgb(255, 0, 0);
