--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -5,6 +5,41 @@ body {
 .slider-container {
     max-width: 100%;
     position: relative;
+    padding: 2rem;
+}
+
+#recently-viewed-spinner {
+    left: 49%;
+}
+
+.lds-ring {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    margin: 0px;
+    border: 4px solid #3498db;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #3498db transparent transparent transparent;
+}
+
+@keyframes lds-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .recently-viewed-cars {
