--- a/src/main/resources/public/css/banner.css
+++ b/src/main/resources/public/css/banner.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     overflow: hidden;
-    background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
+    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 9%, rgb(86 85 91) 42%, rgb(53 53 53) 100%);
 }
 
 .site-banner-inner {
