--- a/src/main/resources/public/css/cars-info.css
+++ b/src/main/resources/public/css/cars-info.css
@@ -11,6 +11,10 @@ body {
     border-collapse: collapse;
 }
 
+.content {
+    flex: 1;
+}
+
 #outside-wrapper,
 #outside-wrapper-equipment {
     background-color: rgba(0, 0, 0, 0.5);
