--- a/src/main/resources/public/css/cars-preview.css
+++ b/src/main/resources/public/css/cars-preview.css
@@ -1,13 +1,17 @@
 .cars-container {
+    position: relative;
     font-family: 'Poppins', sans-serif;
     color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(79,78,83,1) 16%, rgba(87,85,92,1) 26%, rgba(129,125,140,1) 52%, rgba(165,158,181,1) 90%);
+    background:  linear-gradient(90deg, rgb(58 57 59) 16%, rgb(52 52 55) 26%, rgb(73 72 75) 52%, rgb(28 28 28) 90%);
 }
 
-.cars-container h1 {
+#cars-container-h1 {
+    top: 0;
+    position: absolute;
+    margin: 0 auto;
     padding-top: 1.5rem;
     padding-bottom: 1rem;
 }
@@ -22,11 +26,13 @@ body .cars-container:nth-child(4) {
 }
 
 #last {
+    padding-top: 5rem;
     padding-bottom: 2rem;
 }
 
 .car-card {
-    background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(92,90,97,1) 0%, rgba(111,108,120,1) 0%, rgba(129,125,140,1) 9%, rgba(128,124,139,1) 11%, rgba(165,158,181,1) 75%);
+    color: white;
+    background: linear-gradient(90deg, rgb(37 36 36) 11%, rgb(41 40 43) 75%);
     width: 29%;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
