--- a/src/main/resources/public/css/footer.css
+++ b/src/main/resources/public/css/footer.css
@@ -1,20 +1,20 @@
 footer {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(92,90,97,1) 8%, rgba(129,125,140,1) 26%, rgba(128,124,139,1) 33%, rgba(165,158,181,1) 39%, rgba(111,108,120,1) 77%);
+    background: linear-gradient(90deg, rgb(64 64 65) 26%, rgb(58 57 61) 33%, rgb(55 52 52) 39%, rgb(47 45 51) 77%);
 }
 
 .footer-section {
-    margin-top: auto;
     color: #ffffff;
     text-align: center;
-    padding: 15px 0;
 }
 
 .footer-section h3 {
+    padding-top: 1.3rem;
     font-size: 24px;
 }
 
 .footer-section p {
+    color: white;
     font-size: 18px;
     margin-bottom: 20px;
 }
@@ -35,8 +35,8 @@ footer {
 .subscribe-form button {
     padding: 10px 20px;
     border-radius: 0 5px 5px 0;
-    border: 1px solid #a59eb5;
-    background-color: #a59eb5;
+    border: 1px solid #474747;
+    background-color: #3e3d41;
     color: #ffffff;
     cursor: pointer;
     transition: all 0.3s;
