--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -1,11 +1,10 @@
 body {
-    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 9%, rgba(87, 85, 92, 1) 42%, rgba(165, 158, 181, 1) 100%);
+    background: linear-gradient(90deg, rgb(39 38 41) 16%, rgb(44 44 45) 26%, rgb(73 71 79) 52%, rgb(46 45 49) 90%) !important;
 }
 
 .slider-container {
     max-width: 100%;
     position: relative;
-    padding: 1rem;
 }
 
 #recently-viewed-spinner {
@@ -78,7 +77,7 @@ body {
 
     .icon-heart {
         font-size: 24px;
-        color: #666;
+        color: #797373;
         position: relative;
         transition: all .5s ease-in-out;
     }
