--- a/src/main/resources/public/css/nav-header.css
+++ b/src/main/resources/public/css/nav-header.css
@@ -16,10 +16,9 @@
     padding: 0 3.2rem;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 0%, rgba(79, 78, 83, 1) 16%, rgba(87, 85, 92, 1) 26%, rgba(129, 125, 140, 1) 52%, rgba(165, 158, 181, 1) 90%);
+    background: linear-gradient(90deg, rgb(39 38 41) 16%, rgb(44 44 45) 26%, rgb(73 71 79) 52%, rgb(46 45 49) 90%);
     position: sticky;
     top: 0;
-    background-color: white;
     z-index: 11111000;
 }
 
@@ -54,6 +53,8 @@
 
 .nav-header nav ul li {
     margin-right: 11px;
+    margin-top: -3px;
+    margin-bottom: 5px;
 }
 
 .nav-header nav ul li a {
@@ -86,7 +87,7 @@
 }
 
 .nav-header nav:nth-child(4) nav ul li {
-    flex: 0 0 13%;
+    flex: 0 0 14%;
     text-align: center;
 }
 
@@ -100,12 +101,12 @@ a {
 }
 
 .nav-header .h1 h1 {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Exo', sans-serif;
     font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
-    background-color: #7D7C7C;
+    background-color: #3f3f3f;
     letter-spacing: 2px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     padding: 10px 20px;
@@ -120,7 +121,7 @@ a {
 }
 
 a {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Exo', sans-serif;
     color: #fff;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
