--- a/src/main/resources/public/css/register.css
+++ b/src/main/resources/public/css/register.css
@@ -1,15 +1,19 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 9%, rgba(87, 85, 92, 1) 42%, rgba(165, 158, 181, 1) 100%);
+    background:  linear-gradient(90deg, #303031 39%, #343337 54%);
     color: #fff;
+}
+
+.content {
+    flex: 1;
 }
 
 .register-container {
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background: linear-gradient(90deg,  rgb(82 79 89) 9%, rgb(76 75 81) 50%, rgb(203 194 223) 100%);
+    background: linear-gradient(90deg, rgb(57 57 57) 9%, rgb(76 75 81) 50%, rgb(25 23 28) 100%);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -41,7 +45,7 @@ body {
     width: 150px;
     cursor: pointer;
     display: inline-block;
-    background-color: #a59eb5;
+    background-color: #4d4d4f;
     padding: 10px 34px;
     text-decoration: none;
     border-radius: 5px;
@@ -51,7 +55,7 @@ body {
 }
 
 .register-container button:hover {
-    background-color: #8c8292;
+    background-color: #6c6c72 !important;
 }
 
 #overlay,
