--- a/src/main/resources/public/css/reset-password.css
+++ b/src/main/resources/public/css/reset-password.css
@@ -1,11 +1,15 @@
 body {
-    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 9%, rgba(87, 85, 92, 1) 42%, rgba(165, 158, 181, 1) 100%);
+    background: linear-gradient(90deg, #303031 39%, #343337 54%) !important;
+}
+
+.content {
+    flex: 1;
 }
 
 #reset-password-container {
     display: flex;
     flex-direction: column;
-    margin: 70px auto;
+    margin: 5rem auto;
 }
 
 #resetPasswordForm {
@@ -31,21 +35,21 @@ body {
 }
 
 #reset-password-container {
+    font-family: 'Exo', sans-serif;
     max-width: 400px;
-    margin: 20px auto;
     padding: 20px;
-    background: linear-gradient(90deg, rgb(95, 95, 95) 9%, rgba(87, 85, 92, 1) 42%, rgba(165, 158, 181, 1) 100%);
+    background: linear-gradient(90deg, rgb(95, 95, 95) 9%, rgb(102 100 107) 42%, rgb(54 53 55) 100%);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     text-align: center;
 }
 
 h2 {
-    color: #333333;
+    color: white;
 }
 
 p {
-    color: #333333;
+    color: white;
     margin-bottom: 20px;
 }
 
@@ -56,7 +60,7 @@ form {
 
 label {
     margin-bottom: 5px;
-    color: #333333;
+    color: white;
 }
 
 input {
