--- a/src/main/resources/public/css/showroom.css
+++ b/src/main/resources/public/css/showroom.css
@@ -28,7 +28,7 @@
 body {
     height: 100%;
     margin: 0;
-    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 9%, rgba(87, 85, 92, 1) 42%, rgba(165, 158, 181, 1) 100%);
+    background: linear-gradient(90deg, #303031 39%, #343337 54%) !important;
 }
 
 @media (max-width: 567px) {
@@ -42,7 +42,7 @@ body {
 #info-page {
     cursor: pointer;
     display: inline-block;
-    background-color: #a59eb5;
+    background-color: #4d4d4f;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
@@ -54,12 +54,12 @@ body {
 #firstPersonBtn:hover,
 #thirdPersonBtn:hover,
 #info-page:hover {
-    background-color: #8c8292 !important;
+    background-color: #6c6c72 !important;
 }
 
 #info-page {
     width: max-content;
-    margin: 1rem auto;
+    margin: 0.3rem auto;
     color: black;
 }
 
@@ -151,6 +151,9 @@ body {
 }
 
 #info-icon img {
+    background: #979797;
+    border: 2px solid #d7d7d7;
+    border-radius: 50%;
     cursor: pointer;
     width: 100%;
     height: auto;
