--- a/src/main/resources/public/css/profile.css
+++ b/src/main/resources/public/css/profile.css
@@ -283,10 +283,10 @@ input[type="password"]::-webkit-reveal {
 }
 
 .order-status[status="Expired"] {
-    color: #000;
+    color: #b5b5b5;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
-    background-color: rgb(255, 0, 0);
+    background-color: #590B0D;
     font-weight: 599;
     position: relative;
 }
