--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -156,7 +156,7 @@ body {
     background: rgba(0, 0, 0, 0.7);
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 100000;
 }
 
 @media (min-width: 601px) {
@@ -208,4 +208,8 @@ body {
 
 .car-card[max-width="true"] {
     max-width: 400px !important;
+}
+
+.recently-viewed-cars .car-card {
+    font-family: 'Exo', sans-serif !important;
 }
